2009-08-10  Helmut Eller  <heller@common-lisp.net>

	Separate context info from compiler message text.

	* swank-backend.lisp (compiler-condition): Add a new slot
	:source-context.  Remove :short-message.
	* swank-cmucl.lisp, swank-sbcl.lisp, swank-scl.lisp,
	swank-openmcl.lisp, swank-ccl.lisp: Update callers.
	* swank.lisp (make-compiler-note): Use source-context slot.
	* slime.el (slime-note.source-context): New.
	(slime-insert-compilation-log): Use it.
	(slime-note.short-message): Deleted.

2009-08-10  Helmut Eller  <heller@common-lisp.net>

	Don't add linebreaks for one-line messages.

	(slime-insert-block): New function.
	(slime-insert-compilation-log): Use it.
	(slime-indent-rigidly): Use insert-before-markers, otherwise point
	ends up at before a bunch of inserted spaces.

2009-08-10  Helmut Eller  <heller@common-lisp.net>

	Various compilation related changes.

	* slime.el (slime-show-note-counts): Don't show 0 values.
	(slime-severity<): New function.
	(slime-maybe-show-compilation-log): Always create the log buffer
	but display it only if the compilation failed.
	(slime-insert-compilation-log): Disable the stupidly inefficient
	font-lock-after-change-function.
	(slime-canonicalized-location-to-string): Use relative filenames.
	(slime-goto-location-buffer): Disable warnings about symlinks.

2009-08-09  Tobias C. Rittweiler  <tcr@freebits.de>

	Make C-x ` work again.

	M-n and C-x ` are now very similiar; but the former operates
	relative to point in the source buffer, while the latter works
	relative to the compilation log.

	* slime.el (slime-insert-compilation-log): No do set
	`compilation-skip-to-next-location'.

2009-08-09  Tobias C. Rittweiler  <tcr@freebits.de>

	M-n/M-p in .lisp buffers do not show the note in the minibuffer
	anymore if a compilation log is displayed to the user.

	In the compilation log, sort and group the notes by line/column
	number.

	* slime.el (slime-insert-compilation-log): Sort the notes by their