@@ -2966,28 +2966,33 @@ Each newlines and following indentation is replaced by a single space."
         (dolist (notes grouped-notes)
           (let ((loc (gethash (first notes) canonicalized-locs-table))
                 (start (point)))
-            (insert (slime-canonicalized-location-to-string loc) ":\n")
-            (dolist (note notes)
-              (insert "  ")
-              (insert (slime-severity-label (slime-note.severity note)) ": ")
-              (slime-insert-block
-               (concat (slime-note.message note)
-                       (let ((ctx (slime-note.source-context note)))
-                         (if ctx (format "\n%s" ctx))))
-               4)
-              (insert "\n"))
+            (insert (slime-canonicalized-location-to-string loc) ":")
+            (slime-insert-note-group notes)
             (insert "\n")
             (slime-make-note-overlay (first notes) start (1- (point))))))
       (compilation-mode)
       (set (make-local-variable 'compilation-skip-threshold) 0)
       (setq next-error-last-buffer (current-buffer)))))
 
-(defun slime-insert-block (string indentation)
-  "Insert TEXT.  If it takes multiple lines, indent it."
-  (cond ((string-match "\n" string)
-         (insert "\n")
-         (slime-with-rigid-indentation indentation (insert string)))
-        (t (insert string))))
+(defun slime-insert-note-group (notes)
+  "Insert a group of compiler messages."
+  (insert "\n")
+  (dolist (note notes)
+    (insert "  " (slime-severity-label (slime-note.severity note)) ": ")
+    (let ((start (point)))
+      (insert (slime-note.message note))
+      (let ((ctx (slime-note.source-context note)))
+        (if ctx (insert "\n" ctx)))
+      (slime-indent-block start 4))
+    (insert "\n")))
+
+(defun slime-indent-block (start column)
+  "If the region back to START isn't a one-liner indent it."
+  (when (< start (line-beginning-position))
+    (save-excursion 
+      (goto-char start) 
+      (insert "\n"))
+    (slime-indent-rigidly start (point) column)))
 
 (defun slime-canonicalized-location (location)
   "Takes a `slime-location' and returns a list consisting of
@@ -3427,7 +3432,8 @@ you should check twice before modifying.")
      (goto-char start)
      (forward-char offset))
     ((:line start &optional column)
-     (goto-line start)
+     (goto-char (point-min))
+     (beginning-of-line start)
      (cond (column (move-to-column column))
            (t (skip-chars-forward " \t"))))
     ((:function-name name)
